--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "bradbourne-admin-panel",
+  "name": "saiprafful-admin-panel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
